2020-10-07:

	2.4.1 released.

	* Fixed a bug that caused loss of the least significant bit of PCM samples
	  loaded from ROMs.

2020-03-29:

	2.4.0 released.

	* In addition to already existing options intended to improve
	  audio output quality in contrast to somewhat degrading emulation
	  accuracy, the two more quirks of LA-32 are now configurable.
	  NicePanning enlarges the allowed value range for the pan setting,
	  providing for smoother panning.
	  NicePartialMixing disables occasional counter-phase mixing of partials
	  making the timbres that contain closely sounding partials be
	  mixed in a more predictable way.
	* Improved emulation of the pitch overflow quirks of the MT-32 GEN0
	  by disabling the upper-bound check that is only applied during the base
	  pitch calculations by modern units. Specifically, this fixes the "starfall"
	  timbre playing at wrong pitch in the WILLY BEAMISH intro when using
	  ROMs of the MT-32 GEN0 (discovered by eddieduff at Sourceforge).
	* Fixed compilation errors when setting various preprocessor definitions
	  intended for debugging.
	* Converted compiler definition MT32EMU_REDUCE_REVERB_MEMORY to a runtime
	  configuration option. This allows the client to ensure that reverb mode
	  changes are safe for rendering in a realtime thread.
	* Improved the implementation of the internal MIDI event queue. Notably,
	  added a new storage mechanism for the payload of SysEx events that
	  does not require memory allocations while pushing events to the queue.

2017-12-24:

	2.3.0 released.

	* Improved emulation of partial allocator. It still handles individual partials as entities and not pairs,
	  but now it keeps inactive partials on a stack rather than assigns the first free partial sorted by index.
	  This behaviour better corresponds to how the real units allocate partials though.
	* Fixed various issues with accessing ROM files with localised pathnames.